--- a/View/MainPage.html
+++ b/View/MainPage.html
@@ -10,20 +10,25 @@
     <header>
         <nav>
             <ul>
-                <a href="/"><img src="https://i.imgur.com/UdWufnm.png" alt="Logo" width="400" height="102" class="center"></a>
+                <a href="/"><img src="https://i.imgur.com/UdWufnm.png" alt="Logo" width="400" height="102" class="center1"></a>
             </ul>
         </nav>
     </header>
 
     <main>
         <form action="/Game" method="POST">
+        <div class="content1">
         <label for="UserN">Username:</label>
         <input type="text" id="UserN" name="Username" required><br><br>
+        </div>
+        <div class="content2">
         <label for="PassW">Password:</label>
         <input type="password" id="PassW" name="Password" required><br><br>
-        <button type="submit">Login</button><br><br>
-        <a href="/Register">Not registered? Create an account!</a> 
+        </div>  
+        <button type="submit" class="content3">Login</button><br><br>
+        <a href="/Register" class="content4">Not registered? Create an account!</a> 
         </form>
+        <a href="/Credits"><img src="https://i.imgur.com/QXRBHZK.png" alt="Credits" width="64" height="64" class="center2"></a>
     </main>
 </body>
 </html>
