--- a/View/MainPage.html
+++ b/View/MainPage.html
@@ -25,7 +25,7 @@
         <label for="PassW">Password:</label>
         <input type="password" id="PassW" name="Password" required><br><br>
         </div>  
-        <button type="submit" class="content3">Login</button><br><br>
+        <button type="submit" class="content3">Sign In</button><br><br>
         <a href="/Register" class="content4">Not registered? Create an account!</a> 
         </form>
         <a href="/Credits"><img src="https://i.imgur.com/QXRBHZK.png" alt="Credits" width="64" height="64" class="center2"></a>
