--- a/View/MainPage.html
+++ b/View/MainPage.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Aboard</title>
     <link rel="stylesheet" href="/css/MainPage.css">
-    <script src="../All Aboard/Sketch.js"></script>
 </head>
 <body style="background-color:#aac8ff;">
     <header>
@@ -17,7 +16,7 @@
     </header>
 
     <main>
-        <form action="/Login" method="POST">
+        <form action="/AllAboard" method="POST">
         <div class="content1">
         <label for="UserN">Username:</label>
         <input type="text" id="UserN" name="Username" required><br><br>
