--- a/View/404.html
+++ b/View/404.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/404.css">
 </head>
 
-<body>
+<body style="background-color:#aac8ff;">
     <header class="main-header">
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
