--- a/View/Register.html
+++ b/View/Register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SignUp</title>
     <link rel="stylesheet" href="/css/CreateAccount.css">
+    <script src="register.js"></script>
 </head>
 <body>
     <head>
@@ -20,12 +21,12 @@
     <main>
         <form action="/" method="GET">
             <div class="content1">
-            <label for="UserN">Create Username:</label>
-            <input type="text" id="UserN" name="Username" required><br><br>
+            <label for="Username">Create Username:</label>
+            <input type="text" id="Username" name="Username" required><br><br>
             </div>
             <div class="content2">
-            <label for="PassW">Create Password:</label>
-            <input type="password" id="PassW" name="Password" required><br><br>
+            <label for="password">Create Password:</label>
+            <input type="password" id="password" name="Password" required><br><br>
             </div>  
             <button type="submit" class="content3">Sign Up</button><br><br>
         </form>
