--- a/View/MainPage.html
+++ b/View/MainPage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Aboard</title>
     <link rel="stylesheet" href="/css/MainPage.css">
+    <script src="login.js"></script>
 </head>
 <body style="background-color:#aac8ff;">
     <header>
@@ -18,12 +19,12 @@
     <main>
         <form action="/AllAboard" method="POST">
         <div class="content1">
-        <label for="UserN">Username:</label>
-        <input type="text" id="UserN" name="Username" required><br><br>
+        <label for="usrname">Username:</label>
+        <input type="text" id="Username" name="Username" required><br><br>
         </div>
         <div class="content2">
-        <label for="PassW">Password:</label>
-        <input type="password" id="PassW" name="Password" required><br><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="Password" required><br><br>
         </div>  
         <button type="submit" class="content3">Sign In</button><br><br>
         <a href="/Register" class="content4">Not registered? Create an account!</a> 
