--- a/View/Login.html
+++ b/View/Login.html
@@ -14,7 +14,7 @@
 				</nav>
 			</header>
 		<div class="login-form">
-			<form action="/AllAboard" method="GET">
+			<form action="AllAboard" method="GET">
 				<input type="text" name="username" placeholder="Username" required>
 				<input type="password" name="password" placeholder="Password" required>
 				<input type="submit" value="Login">
