--- a/View/script.pug
+++ b/View/script.pug
@@ -6,3 +6,4 @@ head
   script(src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js')
   script(src='./Sketch.js')
   script(src='./Class.js')
+  script(src='./Tiles.js')
