--- a/View/register.pug
+++ b/View/register.pug
@@ -17,7 +17,7 @@ form(action='/register' method='POST')
           input.input100(type='password' name='password' placeholder='Password')
           span.focus-input100
         .wrap-input100.validate-input.m-b-16(data-validate='Password is required')
-          input.input100(type='password' name='confirm-password' placeholder='Password')
+          input.input100(type='password' name='confirmPassword' placeholder='Password')
           span.focus-input100
         .flex-sb-m.w-full.p-t-3.p-b-24
         .container-login100-form-btn.m-t-17
