--- a/View/script.pug
+++ b/View/script.pug
@@ -1,5 +1,6 @@
 doctype html
 head
+  title [Place Holder]
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Script
