--- a/View/leaderBoard.pug
+++ b/View/leaderBoard.pug
@@ -1,7 +1,13 @@
 html
     head
-        title = title
+        title Leaderboard
+        meta(charset='UTF-8')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
         link(rel='stylesheet' type='text/css' href='/css/leaderBoard.css')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js')
+        script(src='./Tiles.js')
+        script(src='./Class.js')
+        script(src='./index.js')
     table
         body
         tr
