--- a/View/gameScript.pug
+++ b/View/gameScript.pug
@@ -1,10 +1,10 @@
 doctype html
 head
-  title [Place Holder]
+  title Fight thy Path
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js')
-  script(src='./Sketch.js')
-  script(src='./Class.js')
-  script(src='./Tiles.js')
-  script(src='./Questions.js')
+  script(src='./game.js')
+  script(src='./class.js')
+  script(src='./tiles.js')
+  script(src='./questions.js')
