--- a/View/login.pug
+++ b/View/login.pug
@@ -1,6 +1,6 @@
 doctype html
 head
-  title [Place Holder]
+  title Figth thy Path
   link(rel='stylesheet' type='text/css' href='/css/util.css')
   link(rel='stylesheet' type='text/css' href='/css/main.css')
 .limiter
