--- a/View/leaderBoardScript.pug
+++ b/View/leaderBoardScript.pug
@@ -1,27 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js')
-  link(rel='stylesheet' type='text/css' href='/css/leaderboard.css')
-  <title>Fight thy Path [leaderboard]</title>
-</head>
-<div class="leaderboard">
-  <table id="leaderboard">
-    <thead>
-      <tr>
-        <th>Rank</th>
-        <th>Name</th>
-        <th>Score</th>
-        <th>Death</th>
-      </tr>
-    </thead>
-    <tbody>
-    </tbody>
-  </table>
-</div>
-
-  script(src='./leaderboard.js')
-  script(src='./class.js')
-  script(src='./tiles.js')
+html
+    head
+        title Fight thy Path
+        meta(charset='UTF-8')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js')
+        script(src='./tiles.js')
+        script(src='./class.js')
+        script(src='./leaderboard.js')
